--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <div id="container">
         <div class="boxes readme-wrapper" id="box1">
-           <h2><div class="section"></div>Harry Potter and the Prisoner of Azkaban</h2>
+            <h2>
+                <div class="section"></div>Harry Potter and the Prisoner of Azkaban</h2>
             <p>The story follows
                 <span class="harrypotter">Harry</span> Potter, a young wizard, in his third year at Hogwarts School of Witchcraft and Wizardry. Along
                 with friends Ronald Weasley and Hermione Granger, Harry investigates Sirius Black, an escaped prisoner from
@@ -21,7 +22,8 @@
             <a class="readme-wrapper" href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Prisoner_of_Azkaban_(film)" target="_blank">Read Me</a>
         </div>
         <div class="boxes readme-wrapper" id="box2">
-            <h2><div class="section"></div>Don Quixote</h2>
+            <h2>
+                <div class="section"></div>Don Quixote</h2>
             <p>The story follows the adventures of a noble
                 <span class="noble">(hidalgo)</span> named Alonso Quixano who reads so many chivalric romances that he loses his sanity and decides
                 to set out to revive chivalry, undo wrongs, and bring justice to the world, under the name Don Quixote de
@@ -29,7 +31,8 @@
             <a class="readme-wrapper" href="http://www.sparknotes.com/lit/donquixote/summary/" target="_blank">Read Me</a>
         </div>
         <div class="boxes readme-wrapper" id="box3">
-            <h2><div class="section"></div>If You Give a Mouse a Cookie</h2>
+            <h2>
+                <div class="section"></div>If You Give a Mouse a Cookie</h2>
             <p>A boy gives a cookie to a mouse. The mouse asks for a glass of milk. He then requests a straw (to drink the milk),
                 a mirrorto avoid a milk mustache), nail scissors (to trim his hair in the mirror), and a broom (to sweep
                 up his hair trimmings). Next he wants to take a nap, have a story read to him, draw a picture, and hang the
@@ -40,15 +43,52 @@
                 target="_blank">Read Me</a>
         </div>
         <div class="boxes readme-wrapper" id="box4">
-            <h2><div class="section"></div>Survivor</h2>
+            <h2>
+                <div class="section"></div>Survivor</h2>
             <p>In the book, every member of the Creedish Cult learns how to be a servant for the human race—most of them are
                 butlers and maids—and fear most human pleasures. They await a sign from God to tell them to deliver themselves
                 unto Him; that is, they must commit suicide. The sign finally comes, and a good ten years later, Tender becomes
                 the last surviving member of the cult. He is thrown into mainstream culture and becomes a personal
-                <span
-                    class="icon">icon</span> for many people.</p>
+                <span class="icon">icon</span> for many people.</p>
             <a class="readme-wrapper" href="https://www.goodreads.com/book/show/36236123-survivor" target="_blank">Read Me</a>
         </div>
+    </div>
+    <div>
+        <h1 id="show3" class="font1">Westworld</h1>
+        <h1 id="show2" class="font1">Atlanta</h1>
+        <h1 id="show5" class="font1">Legion</h1>
+        <h1 id="show4" clas="font-2">Barry</h1>
+        <h1 id="show1" clas="font-2">It's Always Sunny In Philadelphia</h1>
+    </div>
+    <div class="border">
+    <h3>Friends</h3>
+        <ul class="list-1">
+            <li>Scott</li>
+            <li>Sean</li>
+            <li>Ryan</li>
+            <li>Erik</li>
+            <li>Paul</li>
+        </ul>
+    </div>
+    <div class="border">
+        <h3>Travel Destinations</h3>
+        <ul class="list-2">
+            <li>New Zealand</li>
+            <li>Brazil</li>
+            <li>Montana</li>
+            <li>Arctic Circle</li>
+            <li>Jamaica</li>
+        </ul>
+    </div>
+    <div class="border">
+        <h3>Fave Restaurant's Until Further Notice</h3>
+        <ul class="list-3">
+            <li>Hot and Hot Fish Club</li>
+            <li>Pharmacy Burger</li>
+            <li>Slate</li>
+            <li>Saw's BBQ</li>
+            <li>The Optimist</li>
+        </ul>
     </div>
 </body>
 
